--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -5,11 +5,11 @@
   <mat-card class ="example-card" *ngFor="let post of list; let i = index">
     <div class="class">
       <mat-card-title>{{post.user.userName}}</mat-card-title>
-        <div class="example-button-container">
-          <button mat-mini-fab color="primary" aria-label="Example icon button with a delete icon">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </div>
+        <!-- <div class="example-button-container"> -->
+          <!-- <button mat-mini-fab color="primary" aria-label="Example icon button with a delete icon"> -->
+            <!-- <mat-icon>delete</mat-icon> -->
+          <!-- </button> -->
+        <!-- </div> -->
     </div>
       <img mat-card-image src={{post.imageSorce}} alt="Photo of a Shiba Inu">
       <mat-card-content>
